# adaption-charts

./: .env.example  .gitignore  BLUEPRINTS.md  README.md  pyproject.toml
data_full/: inspect.html
data_full/canonical/: train.jsonl
data_full/curated/: part1_canonical.jsonl  part1_flat.jsonl  part2_canonical.jsonl  part2_flat.jsonl  report.json
data_full/flat/: train.jsonl
data_full/part1_text/: part1_text.parquet  sample_preview.txt
data_full/renders/: bar_00000.csv  bar_00001.csv  bar_00002.csv  bar_00003.csv  bar_00004.csv  bar_00005.csv  bar_00006.csv  bar_00007.csv  bar_00008.csv  bar_00009.csv  bar_00010.csv  bar_00011.csv  bar_00012.csv  bar_00013.csv  bar_00014.csv  bar_00015.csv  bar_00016.csv  bar_00017.csv  bar_00018.csv  bar_00019.csv  bar_00020.csv  bar_00021.csv  bar_00022.csv  bar_00023.csv  bar_00024.csv  bar_00025.csv  bar_00026.csv  bar_00027.csv  bar_00028.csv  bar_00029.csv  bar_00030.csv  bar_00031.csv  bar_00032.csv  bar_00033.csv  bar_00034.csv  bar_00035.csv  bar_00036.csv  bar_00037.csv  bar_00038.csv  bar_00039.csv  (+1210 more)
data_full/split/: holdout.jsonl  holdout_flat.jsonl  train_pool.jsonl
scripts/: _inspect_fail.py  _inspect_ratio.py  build_part1_text.py  build_pilot.py  curate.py  push_to_hf.py  split_holdout.py  upload_to_adaption.py  verify_adapted.py
src/chartgen/: __init__.py  curation.py  generator.py  schema.py  serialize.py  validator.py
