[project]
name = "adaption-charts"
version = "0.1.0"
description = "Synthetic chart/dashboard -> structured-data generator for the Adaption AutoScientist Challenge"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
